   - remove uri_escape code for perl 5.8
 - ElasticBeanstalk API update: support for Instance and Environment health 
 - Codepipeline API update: support for encription key
 - Config API update: ListDiscoveredResources
 - EC2 API update: Resource oriented bidding for spot instances
 - StorageGateway API update: tagging
 - S3 API update: event filtering
 - IAM API update: Policy simulation methods

0.14 06 Aug 2015
 - LWP Caller (Paws::Net::LWPCaller). Paws supports calling behind HTTPS proxies with LWP (dtikhonov)
 - Maps in JSON type APIS are correctly handled (Issue #40 and #45, PR #46). Thanks to vivus-ignis and dtikhonov
 - Fixes to Paws.pm documentation (arc)
 - Glacier API update: support for Vault Locking
 - EMR API update: Support for new Applications specification 
 - EC2 API update:
   - CreateRoute drops the ClientToken param
   - Support for SpotFleetLaunchSpecification
 - CloudWatch Logs API update: Support Destinations
 - RDS API update: Support for Aurora (new DBCluster calls)
 - Opsworks API update: support for RHEL7
 - DeviceFarm API update: support for iOS
 - SimpleWorkflow API update: support for Lambda

0.13 17 Jul 2015
 - New API: DynamoDB Streams
 - New API: DeviceFarm
 - Paws::Credentials::File. Support for changing the filename via ENVIRONMENT (AWS_CONFIG_FILE)
 - Information for calculating region endpoints is moved into service classes, not the RegionInfo
   class that holds all endpoint information for all services.
 - Rename RegionalEndpointCaller role to EndpointResolver
 - Throw structured exception if an endpoint can't be calculated
 - Support for STS regional endpoint when used passing a region to $paws->service('STS', region => 'Desired region'). 
   $paws->service('STS') still uses the global sts.amazonaws.com endpoint
 - Paws::Credential::AssumeRole and Paws::Credential::STS support new sts_region attribute to select region. Default
   is to use the global region
 - Signin service working again (still hand-coded...)