@@ -12,6 +12,7 @@
  - StorageGateway API update: tagging
  - S3 API update: event filtering
  - IAM API update: Policy simulation methods
+ - Kinesis API update: Appoximate arrival timestamp on Record object
 
 0.14 06 Aug 2015
  - LWP Caller (Paws::Net::LWPCaller). Paws supports calling behind HTTPS proxies with LWP (dtikhonov)
